Attempt at fixing track image position on mobile

--- a/styles/Team.module.css
+++ b/styles/Team.module.css
@@ -97,4 +97,7 @@
         height: 100px;
         width: 100px;
     }
+    .col{
+        margin: 0;
+    }
 }
