--- a/styles/Tracks.module.css
+++ b/styles/Tracks.module.css
@@ -91,7 +91,7 @@
     flex-direction: column-reverse;
     width: 100%;
     padding: 10px;
-    height: 600px !important;
+    height: 100%;
     justify-content: center;
   }
   .image {
@@ -99,7 +99,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: center;
     margin: 0;
   }
   .image img {
@@ -118,6 +118,7 @@
   .contain {
     box-shadow: none;
     width: 100%;
+    height: 100%;
   }
   .wrapper {
     flex-direction: column;
